Fix property spacing on mobile.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -802,7 +802,7 @@ footer {
     width: span(4 of 16);
     margin: 0;
     text-align: right;
-    padding: 0 gutter();
+    padding: 0 gutter() 0 0;
 }
 
 .element-text {
