--- a/css/style.css
+++ b/css/style.css
@@ -1223,7 +1223,7 @@ nav ul {
     width: 24.0506329114%;
     margin: 0;
     text-align: right;
-    padding: 0 5.2631578947%;
+    padding: 0 5.2631578947% 0 0;
   }
 }
 @media screen {
